--- a/src/components/NavPlayer/NavPlayer.css
+++ b/src/components/NavPlayer/NavPlayer.css
@@ -1,17 +1,26 @@
 .nav-player-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
     position: relative;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.nav-logo {
+    position: absolute;
+    left: 1px;
+    width: 150px;
 }
 
 .hamburger-icon {
+    position: absolute;
+    right: 15px;
     font-size: 50px;
     cursor: pointer;
     color: #000;
-    margin-left: 120px;
-    margin-bottom: 30px;
 }
+
 
 .hamburger-menu {
     position: absolute;
