--- a/src/components/TeamGallery/TeamGallery.css
+++ b/src/components/TeamGallery/TeamGallery.css
@@ -9,7 +9,7 @@
   
 .header {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +18,8 @@
 .team-gallery-box {
     background-color: #C3DD00;
     height: 50px;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     border: 4px solid black;
     color: black;
     font-weight: 700;
@@ -62,7 +63,8 @@
 .round-label {
     background-color: #C3DD00;
     height: 50px;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     border: 4px solid black;
     color: black;
     font-weight: 700;
